# remote-work-radar

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: etl.yml
apps/mcp/: README.md  package.json  tsconfig.json
apps/mcp/src/: index.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts  vercel.json
apps/web/public/: robots.txt
apps/web/src/: auth.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apps/web/src/app/api/_debug/schema/: route.ts
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/app/api/debug/errors/: route.ts
apps/web/src/app/api/debug/migrate/: route.ts
apps/web/src/app/api/debug/rows/: route.ts
apps/web/src/app/api/debug/schema/: route.ts
apps/web/src/app/glossary/: page.tsx
apps/web/src/app/jobs/: jobs-client.tsx  page.tsx
apps/web/src/app/jobs/[id]/: page.tsx
apps/web/src/app/me/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/signin/: page.tsx
apps/web/src/app/templates/: page.tsx
apps/web/src/lib/: categories.ts  error-log.ts  glossary.ts  jobs-query.ts  mock-jobs.ts  templates.ts
services/etl/: README.md  pyproject.toml
services/etl/remote_work_radar_etl/: __init__.py  db.py  main.py  models.py  normalize.py
services/etl/remote_work_radar_etl/sources/: __init__.py  hn_hiring.py  remoteok.py  weworkremotely.py
services/etl/tests/: test_hn_header.py  test_normalize.py
