[project]
name = "remote-work-radar-etl"
version = "0.0.1"
description = "ETL for remote-work-radar — pulls, normalizes, and writes remote jobs to Postgres."
authors = [{ name = "Vitaly Zelenov", email = "vitaly.zelenov13@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "typer>=0.15",
    "markdownify>=0.14",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
    "pytest>=8.3",
    "types-beautifulsoup4",
]

[project.scripts]
rwr-etl = "remote_work_radar_etl.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["remote_work_radar_etl*"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
